--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240717T195604Z
+"   /golfscore                                      20240717T202931Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/68355.html">Visualize the greatest common divisor           : 0068355</a>
+<a href="q/58615.html">1 2 Fizz 4 Buzz                                 : 0058615</a>
 <a href="q/274209.html">Wait ASCII was 128 characters all along?        : 0274209</a>
 <a href="q/174142.html">Japanese pitch accent numbers                   : 0174142</a>
 <a href="q/229724.html">Consecutive Distance Rating                     : 0229724</a>
 <a href="q/97436.html">Alphabet Diamond                                : 0097436</a>
 <a href="q/64198.html">99 Bottles of Beer                              : 0064198</a>
 <a href="q/44946.html">Trucks in a parking lot                         : 0044946</a>
-<a href="q/58615.html">1 2 Fizz 4 Buzz                                 : 0058615</a>
 <a href="q/235964.html">Implement the hyperfactorial                    : 0235964</a>
 <a href="q/51445.html">Seven Slash Display                             : 0051445</a>
 <a href="q/172488.html">A sorcerers spellbook                           : 0172488</a>
