--- a/q/274209.html
+++ b/q/274209.html
@@ -51,6 +51,20 @@
 ⌊           Take the minimum
             Implicitly print
 </code></pre>
+<p>Would have been 10 bytes if the output for <code>0</code> was truthy as @xnor suggests:</p>
+<pre><code>⬤↨Ｎ¹²⁸№γ℅ι
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMxJ0fDKbE4VcMzr6C0xK80Nym1SENTR8HQyAJIOueXAtWkAxlAbYnJJUC5TE0QsP7/39DU3MDM0Njc5L9uWQ4A" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>1</code> if all of the characters a printable ASCII, nothing if not. Explanation:</p>
+<pre><code>  Ｎ         Input as a number
+ ↨          Converted to base
+   ¹²⁸      Literal integer `128`
+⬤           All values satisfy
+      №     Count of
+         ι  Current value
+        ℅   Convert to Unicode
+       γ    In printable ASCII
+            Implicitly print
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
 <p>Very similar to <a href="https://codegolf.stackexchange.com/a/274211/58563">Jitse's answer</a>.</p>
