--- a/q/274209.html
+++ b/q/274209.html
@@ -26,17 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>011</td><td>Charcoal</td><td>240717T213655Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274223#274223">Neil</a></td></tr>
-<tr d-ix="1"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
-<tr d-ix="2"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
-<tr d-ix="3"><td>043</td><td>R</td><td>240717T152918Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274215#274215">Dominic </a></td></tr>
-<tr d-ix="4"><td>010</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
+<tr d-ix="0"><td>009</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
+<tr d-ix="1"><td>011</td><td>Charcoal</td><td>240717T213655Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274223#274223">Neil</a></td></tr>
+<tr d-ix="2"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
+<tr d-ix="3"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
+<tr d-ix="4"><td>043</td><td>R</td><td>240717T152918Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274215#274215">Dominic </a></td></tr>
 <tr d-ix="5"><td>039</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
 <tr d-ix="6"><td>054</td><td>Bash</td><td>240717T151013Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274214#274214">Themooni</a></td></tr>
 <tr d-ix="7"><td>007</td><td>Vyxal</td><td>240717T140602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274210#274210">lyxal</a></td></tr>
 <tr d-ix="8"><td>008</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>10</s> 9 bytes</h1>
+<pre><code>7W_YA6Y2m
+</code></pre>
+<p>Outputs a vector of ones, which is <a href="https://codegolf.stackexchange.com/a/95057/36398">truthy</a>, or a vector containing at least a zero, which is <a href="https://codegolf.stackexchange.com/a/95057/36398">falsy</a>, depending on whether the result only uses printable ASCII or not.</p>
+<p><a href="https://tio.run/##y00syfn/3zw8PtLRLNIo97@9eklRaUlGpTpXrXpaYk5xpfp/U3NjIy4A" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##PYmxDkBAEAX79yPX7u65WyqR@ASJKIRrREHDKRS@/ZxGMZlJZg9xS3PSfhoaP8ieahOPK663wWOWsJ05xrZLBFFYgatQKlh85nMJS/kJMZzmz7ZQZmICOyXPVou/3As" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<h3>Explanation</h3>
+<pre><code>      % Implicit input
+7W    % 7, base-2 exponentiation: gives 128
+_YA   % Convert to base 128
+6Y2   % Push ASCII range (predefined literal): ' ':'~'
+m     % Ismembner? element-wise
+      % Implicit display
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
 <pre><code>⌊⍘Ｎ⭆¹²⁸№γ℅ι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM3My8ztzRXwymxODW4BCiUruGZV1Ba4leam5RapKGpowAR9U0s0DA0stBRcM4vBWpLBzKAJiUmlwAVZWqCgfX//4am5gZmhsbmJv91y3IA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Actually outputs <code>1</code> or <code>0</code> for once. Explanation:</p>
@@ -66,7 +80,7 @@
             Implicitly print
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
 <p>Very similar to <a href="https://codegolf.stackexchange.com/a/274211/58563">Jitse's answer</a>.</p>
 <p>Returns <strong>0</strong> for <em>printable</em> or <strong>true</strong> for <em>non-printable</em>.</p>
 
@@ -75,30 +89,16 @@
 <p><a href="https://tio.run/##ddBNC4IwHMfxe6/CDsUGlXtIZ5TSuTfQ2UqjkC3UOolU98COEUS9Nd/IeqBDurXzhx/7f9f@zk/m8WqTdrlYBFKGLne9bs5bmDgjSrMMcM9zGWy3Q8ChnAueiCjoRWIJQoCM74PQME0j9KMkMEBZ7GGjCgnTw2sdUlKBabz9uHvdWQONG9aVwzRqWleY2KrKVcW0JzxU6GjhQdOFIqS1x45SkCCsk@eyuChx2Dfj70GdhfJR2mcYI4wqk@OyuJXFaaZoiyEbU9b/HZ3EzfwftCqzL/luJZ8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Or <strong><a href="https://tio.run/##ddBNC4IwHMfxe69iHYItKvegzSilc2@gs5lGITO0OolU98COEUS9Nd/IeqBDurXzhx/7f1fezkv9ZLnedEU8D6QMHeG43Vy0CLVHjGUZFK7rcNQOoUDSj0UaR0EvihcwhBh8H0LAMEDoRWkAYFnsUaMKKdfDax0yWoGbZPtx97qzBho3rCuba9S0rgjtqypXFdee8FChrYUHTReGsdYeO0pBiolOnsviosTh34y/B3XmykeZyQnBBFcmx2VxK4vTTNEWx33CuPk7Okma@T9oVWZf8t1KPgE" rel="nofollow noreferrer">29 bytes</a></strong> with <strong>0</strong> for <em>printable</em> / <strong><em>truthy</em></strong> for <em>non-printable</em>.</p>
 </div>
-<div id="pu2" class="pu"><h1>APL+WIN, 36 bytes</h1>
+<div id="pu3" class="pu"><h1>APL+WIN, 36 bytes</h1>
 <p>Prompts for integer. Index origin=0. 1=true, 0=false</p>
 <pre><code>(+/v∊32+⍳95)=⍴v←((⌈128⍟2⌈n)⍴128)⊤n←⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3tv4a2ftmjji5jI@1HvZstTTVtH/VuKQNKa2g86ukwNLJ41DvfCMjK0wSKA7maj7qW5AGlgab8B@rn@p/GZcAFwUbmQMLYCEiYWgIJCxDX0MgMTELYFiAFBmC1RgaGIIXmYPWGxibmhoYGhiAZQ1NzAzNDY3MTJLYpAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>44</s> 43 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>44</s> 43 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>f=\(x)all((x+1)%%128&gt;31,if(y&lt;-x%/%128)f(y))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWN7XTbGM0KjQTc3I0NCq0DTVVVQ2NLOyMDXUy0zQqbXQrVPVBAppAjqYmRMstxrw0DQNNBWUFXV07hbTEnOJUBY1HExo0udI0jMwxxGeDxI2NYOIlRaVg4QUgYVNLVGFrkKCFOapgOEjQ0MgMVbQOIopp30KIhAWGRCPUjcYGmI5v0gG73sjAEENq4qMJM8FuNUf3hE4K2CpjE3NDQwNDdEMdHk2Y92hCbxJYjam5gZmhsbkJqgFeRYp1yNKmaEYA5UH-gQQ7LMYA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 10 bytes</h1>
-<pre><code>7W_YA6Y2mA
-</code></pre>
-<p><a href="https://tio.run/##y00syfn/3zw8PtLRLNIo1/H/f1NzYyMuAA" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##PYkxDoAwDMT2e00uaZsyVuIJSKgTsNON/4eyMFi25HE9d5zh@9Fb6TparFsI1GGKvKA6qGXyucJkPhUi@/y05KRQwOxSaJ7@yi8" rel="nofollow noreferrer">verify all test cases</a>.</p>
-<h3>Explanation</h3>
-<pre><code>      % Implicit input
-7W    % 7, base-2 exponentiation: gives 128
-_YA   % Convert to base 128
-6Y2   % Push ASCII range (predefined literal): ' ':'~'
-m     % Ismembner? element-wise
-A     % All. Gives tru if all entries are true
-      % Implicit display
-</code></pre>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 39 bytes</h1>
 
