--- a/q/274209.html
+++ b/q/274209.html
@@ -26,31 +26,39 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
-<tr d-ix="1"><td>011</td><td>Charcoal</td><td>240717T213655Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274223#274223">Neil</a></td></tr>
-<tr d-ix="2"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
-<tr d-ix="3"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
-<tr d-ix="4"><td>043</td><td>R</td><td>240717T152918Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274215#274215">Dominic </a></td></tr>
-<tr d-ix="5"><td>039</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
-<tr d-ix="6"><td>054</td><td>Bash</td><td>240717T151013Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274214#274214">Themooni</a></td></tr>
-<tr d-ix="7"><td>007</td><td>Vyxal</td><td>240717T140602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274210#274210">lyxal</a></td></tr>
-<tr d-ix="8"><td>008</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
+<tr d-ix="0"><td>075</td><td>Go</td><td>240718T005925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274224#274224">bigyihsu</a></td></tr>
+<tr d-ix="1"><td>009</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
+<tr d-ix="2"><td>011</td><td>Charcoal</td><td>240717T213655Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274223#274223">Neil</a></td></tr>
+<tr d-ix="3"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
+<tr d-ix="4"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
+<tr d-ix="5"><td>043</td><td>R</td><td>240717T152918Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274215#274215">Dominic </a></td></tr>
+<tr d-ix="6"><td>039</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
+<tr d-ix="7"><td>054</td><td>Bash</td><td>240717T151013Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274214#274214">Themooni</a></td></tr>
+<tr d-ix="8"><td>007</td><td>Vyxal</td><td>240717T140602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274210#274210">lyxal</a></td></tr>
+<tr d-ix="9"><td>008</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>10</s> 9 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 75 bytes</h1>
+<pre class="lang-go prettyprint-override"><code>func f(n int)bool{for k:=n;k&gt;0;k&gt;&gt;=7{if -^k%128&lt;33{return 0&gt;1}}
+return n&gt;0}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=TVFLasMwEKVbnWJqCNjgBMmOozSpDIV2VSil9a4_XGMF40Q2jhxahI_RVTeh0EP0KO1pKtnB8UKaN6OZ92ZGn1-rYv9Txkker1LYxJlA2aYsKjmx-EZa37Xk4_nvNa9FAtwWkAnpvBbFWvGignzBxDIPsT4hoyrjMH7OR8Sbn_u-qlJZVwJwSJoGHRwR4qaj_Dv5kO9lChFsZVUnElQmSsO-hPStBCPRINTKmqZsBxSSW1gweHiKFFLY5fF6mzYuUh49Yt9zNV0Lg7MezmkPiTcb4EGl7npAg4f8HiZHL6ADDeJPKSGYDLJJQPGM-HR6TDpEgj5JT3Zb6VnXwrYYY_fRxV2kreUgs9UXV5o5q1joH9EzKxQnbYTbcqK35CC9aDkxazplYN4UtHTctkY7YCHo2x7tnEdhudCWuCbN7YocaHQDQ324urmETv_wO_t9Z_8B" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Based on <a href="https://codegolf.stackexchange.com/a/274211/77309">@Jitse's answer</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>10</s> 9 bytes</h1>
 <pre><code>7W_YA6Y2m
 </code></pre>
 <p>Outputs a vector of ones, which is <a href="https://codegolf.stackexchange.com/a/95057/36398">truthy</a>, or a vector containing at least a zero, which is <a href="https://codegolf.stackexchange.com/a/95057/36398">falsy</a>, depending on whether the result only uses printable ASCII or not.</p>
-<p><a href="https://tio.run/##y00syfn/3zw8PtLRLNIo97@9eklRaUlGpTpXrXpaYk5xpfp/U3NjIy4A" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##PYmxDkBAEAX79yPX7u65WyqR@ASJKIRrREHDKRS@/ZxGMZlJZg9xS3PSfhoaP8ieahOPK663wWOWsJ05xrZLBFFYgatQKlh85nMJS/kJMZzmz7ZQZmICOyXPVou/3As" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><a href="https://tio.run/##y00syfn/3zw8PtLRLNIo9/9/U3NjIy4A" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##PYmxDkBAEAX79yPX7u65WyqR@ASJKIRrREHDKRS@/ZxGMZlJZg9xS3PSfhoaP8ieahOPK663wWOWsJ05xrZLBFFYgatQKlh85nMJS/kJMZzmz7ZQZmICOyXPVou/3As" rel="nofollow noreferrer">verify all test cases</a> (the code includes test for truthiness/falsihood).</p>
 <h3>Explanation</h3>
 <pre><code>      % Implicit input
 7W    % 7, base-2 exponentiation: gives 128
 _YA   % Convert to base 128
 6Y2   % Push ASCII range (predefined literal): ' ':'~'
-m     % Ismembner? element-wise
+m     % Ismember (element-wise)
       % Implicit display
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 11 bytes</h1>
 <pre><code>⌊⍘Ｎ⭆¹²⁸№γ℅ι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM3My8ztzRXwymxODW4BCiUruGZV1Ba4leam5RapKGpowAR9U0s0DA0stBRcM4vBWpLBzKAJiUmlwAVZWqCgfX//4am5gZmhsbmJv91y3IA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Actually outputs <code>1</code> or <code>0</code> for once. Explanation:</p>
@@ -80,7 +88,7 @@ m     % Ismembner? element-wise
             Implicitly print
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
+<div id="pu3" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
 <p>Very similar to <a href="https://codegolf.stackexchange.com/a/274211/58563">Jitse's answer</a>.</p>
 <p>Returns <strong>0</strong> for <em>printable</em> or <strong>true</strong> for <em>non-printable</em>.</p>
 
@@ -89,25 +97,25 @@ m     % Ismembner? element-wise
 <p><a href="https://tio.run/##ddBNC4IwHMfxe6/CDsUGlXtIZ5TSuTfQ2UqjkC3UOolU98COEUS9Nd/IeqBDurXzhx/7f9f@zk/m8WqTdrlYBFKGLne9bs5bmDgjSrMMcM9zGWy3Q8ChnAueiCjoRWIJQoCM74PQME0j9KMkMEBZ7GGjCgnTw2sdUlKBabz9uHvdWQONG9aVwzRqWleY2KrKVcW0JzxU6GjhQdOFIqS1x45SkCCsk@eyuChx2Dfj70GdhfJR2mcYI4wqk@OyuJXFaaZoiyEbU9b/HZ3EzfwftCqzL/luJZ8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Or <strong><a href="https://tio.run/##ddBNC4IwHMfxe69iHYItKvegzSilc2@gs5lGITO0OolU98COEUS9Nd/IeqBDurXzhx/7f1fezkv9ZLnedEU8D6QMHeG43Vy0CLVHjGUZFK7rcNQOoUDSj0UaR0EvihcwhBh8H0LAMEDoRWkAYFnsUaMKKdfDax0yWoGbZPtx97qzBho3rCuba9S0rgjtqypXFdee8FChrYUHTReGsdYeO0pBiolOnsviosTh34y/B3XmykeZyQnBBFcmx2VxK4vTTNEWx33CuPk7Okma@T9oVWZf8t1KPgE" rel="nofollow noreferrer">29 bytes</a></strong> with <strong>0</strong> for <em>printable</em> / <strong><em>truthy</em></strong> for <em>non-printable</em>.</p>
 </div>
-<div id="pu3" class="pu"><h1>APL+WIN, 36 bytes</h1>
+<div id="pu4" class="pu"><h1>APL+WIN, 36 bytes</h1>
 <p>Prompts for integer. Index origin=0. 1=true, 0=false</p>
 <pre><code>(+/v∊32+⍳95)=⍴v←((⌈128⍟2⌈n)⍴128)⊤n←⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3tv4a2ftmjji5jI@1HvZstTTVtH/VuKQNKa2g86ukwNLJ41DvfCMjK0wSKA7maj7qW5AGlgab8B@rn@p/GZcAFwUbmQMLYCEiYWgIJCxDX0MgMTELYFiAFBmC1RgaGIIXmYPWGxibmhoYGhiAZQ1NzAzNDY3MTJLYpAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>44</s> 43 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>44</s> 43 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>f=\(x)all((x+1)%%128&gt;31,if(y&lt;-x%/%128)f(y))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWN7XTbGM0KjQTc3I0NCq0DTVVVQ2NLOyMDXUy0zQqbXQrVPVBAppAjqYmRMstxrw0DQNNBWUFXV07hbTEnOJUBY1HExo0udI0jMwxxGeDxI2NYOIlRaVg4QUgYVNLVGFrkKCFOapgOEjQ0MgMVbQOIopp30KIhAWGRCPUjcYGmI5v0gG73sjAEENq4qMJM8FuNUf3hE4K2CpjE3NDQwNDdEMdHk2Y92hCbxJYjam5gZmhsbkJqgFeRYp1yNKmaEYA5UH-gQQ7LMYA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 39 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 39 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:32&lt;-~n%128and(n&lt;128)|f(n&gt;&gt;7)
 </code></pre>
 <p><a href="https://tio.run/##Xc7BSsQwEIDhe55iPAgZaZc0tZvuuvYBfAGPEukGC91pSONBkKI@wXoUL/pq@yI17cV0L2HyDQy/ffFPHeXjaG5bfXisNdA2l7t0oMtMlppqTrsw4KvhVFUKR9M5oASuHqAhOGjLe@9WvW0bn0Bn98QF4pYBWNeQ54ZPLyHiKCBNKzC67ffAT8c3ZFIt6RtZLmfy7nmWH2TFJpIbZKWK/vfIMrmOYJjg7OzvZOXS3ueAXJxFfSShSopsqZ@n41cIUYu4pA5nCyXWWa6uI79zF8P/pogvhdVU8wc" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>-4 bytes thanks to Themoonisacheese and squareroot12621</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 54 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 54 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>(($1%128&gt;31&amp;&amp;$1%128&lt;127))&amp;&amp;((($1&lt;128))||$0 $(($1&gt;&gt;7)))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=TdGxbsMgEAZgdc1T3JAgGCLxg_HhKvK7pFWtSB0ytN38Gp26eEgeqn2aGi46POHTB4L_98_t5fxxWW6Tdfb-9Tkd82-ydo8DQh4jjJHPEwI7Z4wttg7ZuXmeaF_GcVzJyeG_p2-3e3u9XAnPu4k8zTPJSNd3gVAgsEpQiUViIGNEokpXJA0qnUoqklklqfRFEHqlXomF2htYKQtlUstqQ32fb6GGlegR19dYwaNF9noStY3Em3BojaBWgsS-R-SubWnVIG63pHZH6wi1JMSOAY9N86Us-TvLIus_" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -115,7 +123,7 @@ m     % Ismembner? element-wise
 ATO link assumes the function is named <code>f</code> because $0 doesn't work in ATO, but the penalty for hardcoding the script name would be a single byte, so the score would be the same.</p>
 <p>Turns out this is a port of <a href="https://codegolf.stackexchange.com/a/274211/88192">@Jitse's answer</a>, but i came up with it independently.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
 <pre><code>₇τCkQF¬
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwi4oKHz4RDa1FGwqwiLCIiLCIwXG4yN1xuMzJcbjU5XG44N1xuMTI2XG4xMjdcbjEyOFxuMzAwXG4yMjAxXG41NzMyXG4xNTcwNjEzNzRcbjE1NzA2MTM3NSJd" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -130,7 +138,7 @@ ATO link assumes the function is named <code>f</code> because $0 doesn't work in
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
 <pre><code>bØ⁷ỌfƑØṖ
 </code></pre>
 <p><a href="https://jht.hyper-neutrino.xyz/tio#WyIiLCJiw5jigbfhu4xmxpHDmOG5liIsIsOH4oKsIiwiIixbIlswLCAyNywgMzIsIDU5LCA4NywgMTI2LCAxMjcsIDEyOCwgMzAwLCAyMjAxLCA1NzMyLCAxNTcwNjEzNzQsIDE1NzA2MTM3NV0iXV0=" rel="nofollow noreferrer">Try It Online!</a></p>
