--- a/q/274225.html
+++ b/q/274225.html
@@ -34,7 +34,7 @@
 </code></pre>
 <p><a href="https://tio.run/##LY47DsIwEET7nGIu4Ej8GkC0iIYGUUUpbGsjLGIneNeRIsTZjSPo5s2bYjptZYj5frtcz3uMkUTmMbog8Foe9USLZjwpBurB9EoULPHP2sEbF3RZOPuvWLQ4loUPVfWG2kFtscIaG3xyg@NI0adlNAQ@oYFNXnHymLRhcCoPfKEWLnSuJGVmtNnqvkedvw" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
 <ul>
-<li><code>&lt;permutations&gt; [ ... ] infimum-by</code> get smallest permutation by function <code>[ ... ]</code>.</li>
+<li><code>&lt;permutations&gt; [ ... ] infimum-by</code> Get smallest permutation by function <code>[ ... ]</code>. The angle brackets aren't special; it's just a naming convention signifying that it's a virtual sequence (similar to a lazy list).</li>
 <li><code>cum-sum</code> cumulative sum</li>
 <li><code>vabs</code> vectorized absolute value</li>
 <li><code>supremum</code> largest</li>
