--- a/q/274225.html
+++ b/q/274225.html
@@ -26,10 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
-<tr d-ix="1"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
+<tr d-ix="0"><td>058</td><td>Arturo</td><td>240718T031557Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274228#274228">chunes</a></td></tr>
+<tr d-ix="1"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
+<tr d-ix="2"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a> + <code>math.combinatorics</code>, 55 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 58 bytes</h1>
+<pre><code>$=&gt;[minimum permutate&amp;'p-&gt;max map size p=&gt;[abs∑take p&amp;]]
+</code></pre>
+<p><a href="http://arturo-lang.io/playground?n5PEWA" rel="nofollow noreferrer">Try it!</a></p>
+<h3>Explanation</h3>
+<pre><code>$=&gt;[]                   ; a function where input is assigned to &amp;
+minimum permutate&amp;'p-&gt;  ; minimum permutation of input by; current perm is p
+max                     ; max value in
+map size p=&gt;[]          ; map over current perm's indices, assign to &amp;
+abs                     ; absolute value
+∑                       ; sum
+take p&amp;                 ; current prefix of current permutation
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a> + <code>math.combinatorics</code>, 55 bytes</h1>
 <pre><code>[ &lt;permutations&gt; [ cum-sum vabs supremum ] infimum-by ]
 </code></pre>
 <p><a href="https://tio.run/##LY47DsIwEET7nGIu4Ej8GkC0iIYGUUUpbGsjLGIneNeRIsTZjSPo5s2bYjptZYj5frtcz3uMkUTmMbog8Foe9USLZjwpBurB9EoULPHP2sEbF3RZOPuvWLQ4loUPVfWG2kFtscIaG3xyg@NI0adlNAQ@oYFNXnHymLRhcCoPfKEWLnSuJGVmtNnqvkedvw" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
@@ -40,7 +55,7 @@
 <li><code>supremum</code> largest</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
 <pre><code>Ṗ≬¦ȧG∵
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLhuZbiiazCpsinR+KItSIsIiIsIlstNSwtNCwxLDIsM10iXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
