--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240718T033318Z
+"   /golfscore                                      20240718T042655Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/243173.html">Is it a tower permutation?                      : 0243173</a>
 <a href="q/160368.html">Work out root(x n)                              : 0160368</a>
 <a href="q/274209.html">Wait ASCII was 128 characters all along?        : 0274209</a>
 <a href="q/274225.html">Reorder for smallest largest prefix sum         : 0274225</a>
