--- a/q/274225.html
+++ b/q/274225.html
@@ -26,12 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>085</td><td>R</td><td>240718T061307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274232#274232">pajonk</a></td></tr>
-<tr d-ix="1"><td>058</td><td>Arturo</td><td>240718T031557Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274228#274228">chunes</a></td></tr>
-<tr d-ix="2"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
-<tr d-ix="3"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
+<tr d-ix="0"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
+<tr d-ix="1"><td>085</td><td>R</td><td>240718T061307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274232#274232">pajonk</a></td></tr>
+<tr d-ix="2"><td>058</td><td>Arturo</td><td>240718T031557Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274228#274228">chunes</a></td></tr>
+<tr d-ix="3"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
+<tr d-ix="4"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 85 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 99 bytes</h1>
+<p>Naive method trying all possible permutations.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>f=(a,s=M=a,m,...p)=&gt;a.map((v,i)=&gt;f(a.filter(_=&gt;i--),q=~~s+v,q*q&lt;m?m:q*q,...p,v))+a||m&gt;M?o:(M=m,o=p)
+</code></pre>
+<p><a href="https://tio.run/##bYtBCoMwEEX3PcmkTgJtFYp09ASeoJQyWFNSjIlGshKvnorL0tXn/ff/hyOHdjJ@loN7dSlpAsZADTFaVEp5QRUryx4gotlAAytt@rmb4EmVkVLgSOsasojjcbzZ2pZb7leMQmS8LLZqaldCQxYdeZFaNwTXd6p3b9BwP@EZL5hj8RDi8ONkgTLHffHPXjHf6vQF" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 85 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>`?`=\(x,y={})`if`(sum(x|1),x[j&lt;--order(sapply(x,\(i)abs(sum(y,i))))[1]]?c(y,x[-j]),y)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=NY5BboNADEX3PYWlbmzJsyCAxCIE9RBZkZEgFJSJKBPNQMuI5CTd0Eg5VG5TQog31refn_z7Z8ZrFd-6thLRfZslWbzDnl08XChTVYa2-8L-7BH36XEthDafpUGbn061m7gdKsr3dqYcK5oq9aRMiin1qThKYkeLfKiwQI9X7HPAIdE7xBvAj8bBLKW3x16ELAKeqYVIH2Ga-SxCCagN6PZQGrC67lqlGws_qj3Ad153JfiLJeLgdR6wiOTzhXF89n8" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -44,7 +52,7 @@ f(x[-j],y)
 } else y
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 58 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 58 bytes</h1>
 <pre><code>$=&gt;[minimum permutate&amp;'p-&gt;max map size p=&gt;[abs∑take p&amp;]]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?n5PEWA" rel="nofollow noreferrer">Try it!</a></p>
@@ -58,7 +66,7 @@ abs                     ; absolute value
 take p&amp;                 ; current prefix of current permutation
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a> + <code>math.combinatorics</code>, 55 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a> + <code>math.combinatorics</code>, 55 bytes</h1>
 <pre><code>[ &lt;permutations&gt; [ cum-sum vabs supremum ] infimum-by ]
 </code></pre>
 <p><a href="https://tio.run/##LY47DsIwEET7nGIu4Ej8GkC0iIYGUUUpbGsjLGIneNeRIsTZjSPo5s2bYjptZYj5frtcz3uMkUTmMbog8Foe9USLZjwpBurB9EoULPHP2sEbF3RZOPuvWLQ4loUPVfWG2kFtscIaG3xyg@NI0adlNAQ@oYFNXnHymLRhcCoPfKEWLnSuJGVmtNnqvkedvw" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
@@ -69,7 +77,7 @@ take p&amp;                 ; current prefix of current permutation
 <li><code>supremum</code> largest</li>
 </ul>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 6 bytes</h1>
 <pre><code>Ṗ≬¦ȧG∵
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLhuZbiiazCpsinR+KItSIsIiIsIlstNSwtNCwxLDIsM10iXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
